--- a/chat_feature_API.html
+++ b/chat_feature_API.html
@@ -81,7 +81,7 @@
     </div>
 
     <script>
-      const API_KEY = "AIzaSyDdKP2lGmu8sLnEBrCkiIWvQz3zWpr6tbI";
+      const API_KEY = "API_KEY";
 
       // Function to get channel ID by channel name
       async function getChannelId(channelName) {
